--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script>
-        new Glide('.glide'{
+        new Glide('.glide',{
             type: 'carousel',
             startAt: 0,
             perView: 3,
@@ -174,9 +174,9 @@
             breakpoint:{
                 991:{
                 perView:2
-                }
+                },
                 768:{
-                    perView:1
+                    perView: 1
                 }
             }
 
