se colocaron los caruseles de las paginas home e item

--- a/pages/shop/item.html
+++ b/pages/shop/item.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Funkoshop | Item</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
     <link rel="stylesheet" href="../../css/index.css">
     <link rel="icon" href="../../img/branding/isotype.svg">
 </head>
@@ -66,45 +68,76 @@
                 </a>
             </li>
         </ul><!-- fin item -->
-
-        <section><!-- inicio slider -->
+        <section class="slider container glide "><!-- inicio slider -->
             <h2 class="prod-rel">PRODUCTOS RELACIONADOS</h2>
-            <ul class="texto-ima-3">
-                <li><!--inicio cuarta seccion primer articulo-->
-                    <a href="">
-                        <div>
-                            <p class="img-card-wars"><input type=button class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">STAR WARS</p>
-                            <h4 style="margin-bottom: 13.9px">STORMTROOPER LIGHTSABER</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a>
-                </li> <!--fin cuarta seccion primer articulo-->
-                <li> <!--inicio cuarta seccion segundo articulo-->
-                    <a href="">
-                        <div>
-                            <p class="img-card-pokemon"><input type=button class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">POKEMON</p>
-                            <h4 style="margin-bottom: 13.9px">PIDGEOTTO</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a>    
-                </li>  <!--fin cuarta seccion segundo articulo-->
-                <li>
-                    <a href="">
-                        <div>
-                            <p class="img-card-potter"><input type=button class="boton-nuevo" value="NUEVO"></p>
-                            <p id="primer-tex">HARRY POTTER</p>
-                            <h4 style="margin-bottom: 13.9px">LUNA LOVEGOOD LION MASK</h4>
-                            <p id="segundo-tex">$ 1799,99</p>
-                            <p id="tercer-tex">3 CUOTAS SIN INTERÉS</p>
-                        </div>
-                    </a>     <!--fin cuarta seccion tercer articulo-->
-                </li>
-            </ul>
-        </section><!-- inicio slider -->
+            <div class="glide__track" data-glide-el="track">
+                <ul class="slider__items glide__slides">
+                    <li class="slider__item glide__slide "><!-- inicio cuarta seccion primer articulo -->
+                        <article class="card-item">
+                            <a class="card-item__link" href="../shop/item.html">
+                                <picture class="card-item__cover">
+                                    <span class="card-item__tag">NUEVO</span>
+                                    <img class="card-item__img--front" src="../../img/star-wars/trooper-1.webp"
+                                        alt="figura coleccionable funko star wars trooper">
+                                    <img class="card-item__img--back" src="../../img/star-wars/trooper-box.webp"
+                                        alt="figura coleccionable funko star wars trooper box">
+                                </picture>
+                                <div class="card-item__content">
+                                    <p class="card-item__licence">STAR WARS</p>
+                                    <h4 class="card-item__name">STORMTROOPER LIGHTSABER</h4>
+                                    <p class="card-item__price">$ 1799,99</p>
+                                    <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                                </div>
+                            </a>
+                        </article>
+                    </li><!-- fin cuarta seccion primer articulo -->
+
+                    <li class="slider__item glide__slide"><!-- inicio cuarta seccion segundo articulo -->
+                        <article class="card-item">
+                            <a class="card-item__link" href="../shop/item.html">
+                                <picture class="card-item__cover">
+                                    <span class="card-item__tag">NUEVO</span>
+                                    <img class="card-item__img--front" src="../../img/pokemon/pidgeotto-1.webp"
+                                        alt="figura coleccionable funko pokemon pidgeotto">
+                                    <img class="card-item__img--back" src="../../img/pokemon/pidgeotto-box.webp"
+                                        alt="figura coleccionable funko pokemon pidgeotto box">
+                                </picture>
+                                <div class="card-item__content">
+                                    <p class="card-item__licence">POKEMON</p>
+                                    <h4 class="card-item__name">PIDGEOTTO</h4>
+                                    <p class="card-item__price">$ 1799,99</p>
+                                    <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                                </div>
+                            </a>
+                        </article>
+                    </li><!-- fin cuarta seccion segundo articulo -->
+
+                    <li class="slider__item glide__slide"><!-- inicio cuarta seccion tercer articulo -->
+                        <article class="card-item">
+                            <a class="card-item__link" href="../shop/item.html">
+                                <picture class="card-item__cover">
+                                    <span class="card-item__tag">NUEVO</span>
+                                    <img class="card-item__img--front" src="../../img/harry-potter/luna-1.webp"
+                                        alt="figura coleccionable funko Harru-potter luna">
+                                    <img class="card-item__img--back" src="../../img/harry-potter/luna-box.webp"
+                                        alt="figura coleccionable funko Harru-potter luna box">
+                                </picture>
+                                <div class="card-item__content">
+                                    <p class="card-item__licence">HARRY POTTER</p>
+                                    <h4 class="card-item__name">LUNA LOVEGOOD LION MASK</h4>
+                                    <p class="card-item__price">$ 1799,99</p>
+                                    <p class="card-item__promo">3 CUOTAS SIN INTERÉS</p>
+                                </div>
+                            </a> <!-- fin cuarta seccion tercer articulo -->
+                        </article>
+                    </li>
+                </ul>
+            </div>
+            <div class="glide__arrows" data-glide-el="controls">
+                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><iconify-icon icon="ic:round-chevron-left"></iconify-icon></button>
+                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><iconify-icon icon="ic:round-chevron-right"></iconify-icon></button>
+              </div>
+        </section>
     </main>
 
     <footer><!-- inicio footer seccion -->
@@ -118,5 +151,24 @@
         </nav>
         <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!-- fin footer seccion -->
+    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
+    <script>
+        new Glide('.glide',{
+            type: 'carousel',
+            startAt: 0,
+            perView: 3,
+            gap: 30,
+            breakpoint:{
+                991:{
+                perView:2
+                },
+                768:{
+                    perView: 1
+                }
+            }
+
+        }).mount()
+    </script>
 </body>
 </html>
