--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
                     </li>
                 </ul>
             </div>
+            <div class="glide__arrows" data-glide-el="controls">
+                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><iconify-icon icon="ic:round-chevron-left"></iconify-icon></button>
+                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><iconify-icon icon="ic:round-chevron-right"></iconify-icon></button>
+              </div>
         </section>
     </main><!-- fin cuerpo principal -->
 
