--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funkoshop | Home</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="icon" href="./img/branding/isotype.svg">
 </head>
@@ -169,23 +167,7 @@
     </footer><!-- fin footer seccion -->
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-    <script>
-        new Glide('.glide',{
-            type: 'carousel',
-            startAt: 0,
-            perView: 3,
-            gap: 30,
-            breakpoint:{
-                991:{
-                perView:2
-                },
-                768:{
-                    perView: 1
-                }
-            }
-
-        }).mount()
-    </script>
+    <script src="./js/glide.js"></script>
 </body>
 
 </html>
