--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -95,9 +95,9 @@
         </aside>
 
         <div>
-            <ul class="slider__items">
+            <ul class="slider__items card-item">
                 <li class="slider__item"><!-- inicio cuarta seccion primer articulo -->
-                    <article class="card-item">
+                    <article >
                         <a class="card-item__link" href="../../pages/shop/item.html">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">NUEVO</span>
@@ -115,7 +115,7 @@
                 </li><!-- fin cuarta seccion primer articulo -->
 
                 <li class="slider__item"><!-- inicio cuarta seccion segundo articulo -->
-                    <article class="card-item">
+                    <article >
                         <a class="card-item__link" href="../../pages/shop/item.html">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">NUEVO</span>
@@ -133,7 +133,7 @@
                 </li><!-- fin cuarta seccion segundo articulo -->
                 
                 <li class="slider__item"><!-- inicio cuarta seccion tercer articulo -->
-                    <article class="card-item">
+                    <article >
                         <a class="card-item__link" href="../../pages/shop/item.html">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">NUEVO</span>
@@ -151,9 +151,9 @@
                 </li><!-- fin cuarta seccion tercer articulo -->
             </ul>
 
-            <ul class="slider__items">
+            <ul class="slider__items card-item">
                 <li class="slider__item "><!-- inicio cuarta seccion primer articulo -->
-                    <article class="card-item">
+                    <article >
                         <a class="card-item__link" href="../../pages/shop/item.html">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">NUEVO</span>
@@ -171,7 +171,7 @@
                 </li><!-- fin cuarta seccion primer articulo -->
 
                 <li class="slider__item"><!-- inicio cuarta seccion segundo articulo -->
-                    <article class="card-item">
+                    <article >
                         <a class="card-item__link" href="../../pages/shop/item.html">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">NUEVO</span>
@@ -189,7 +189,7 @@
                 </li><!-- fin cuarta seccion segundo articulo -->
 
                 <li class="slider__item"><!-- inicio cuarta seccion tercer articulo -->
-                    <article class="card-item">
+                    <article >
                         <a class="card-item__link" href="../../pages/shop/item.html">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">NUEVO</span>
@@ -207,9 +207,9 @@
                 </li><!-- fin cuarta seccion tercer articulo -->
             </ul>
 
-            <ul class="slider__items"><!-- inicio cuarta seccion primer articulo -->
+            <ul class="slider__items card-item"><!-- inicio cuarta seccion primer articulo -->
                 <li class="slider__item ">
-                    <article class="card-item">
+                    <article >
                         <a class="card-item__link" href="../../pages/shop/item.html">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">NUEVO</span>
@@ -227,7 +227,7 @@
                 </li><!-- fin cuarta seccion primer articulo -->
 
                 <li class="slider__item"><!-- inicio cuarta seccion segundo articulo -->
-                    <article class="card-item">
+                    <article >
                         <a class="card-item__link" href="../../pages/shop/item.html">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">NUEVO</span>
@@ -245,7 +245,7 @@
                 </li><!-- fin cuarta seccion segundo articulo -->
 
                 <li class="slider__item"><!-- inicio cuarta seccion tercer articulo -->
-                    <article class="card-item">
+                    <article >
                         <a class="card-item__link" href="../../pages/shop/item.html">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">NUEVO</span>
@@ -287,5 +287,6 @@
         </nav>
         <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!--fin footer seccion -->
+    
 </body>
 </html>
