se finalizo la ruta de shop

--- a/public/pages/shop/item.html
+++ b/public/pages/shop/item.html
@@ -68,7 +68,7 @@
                             style="background-image: url(../../img/icons/-.svg)"></button>
                     </div>
                     <div> <input class="boton" style="width: 181px; height: 37.91px;" type="submit"
-                            value="Agrergar al carrito"></div>
+                            value="Agregar al carrito"></div>
                 </div>
 
                 <a href="">
