--- a/public/pages/shop/item.html
+++ b/public/pages/shop/item.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Funkoshop | Item</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.theme.min.css">
     <link rel="stylesheet" href="../../css/index.css">
     <link rel="icon" href="../../img/branding/isotype.svg">
 </head>
@@ -15,11 +13,13 @@
     <header><!-- inicio header -->
         <nav class="container navbar">
             <picture class="navbar__logo">
-                <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop"></a>
+                <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg"
+                        alt="Isologotipo de la marca funkoshop"></a>
             </picture>
             <ul class="navbar__menu">
                 <li class="navbar__item with__submenu">
-                    <a class="navbar__link with_icon" href="../shop/shop.html">SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon></a>
+                    <a class="navbar__link with_icon" href="../shop/shop.html">SHOP<iconify-icon
+                            icon="mdi:chevron-down"></iconify-icon></a>
                     <ul class="submenu">
                         <li class="submenu__item">
                             <a href="../shop/shop.html" class="submenu__link">Funkos</a>
@@ -42,8 +42,13 @@
 
     <main class="container">
         <ul class="lista-item"><!-- inicio item -->
-            <li class="imagen-yoda">
-                <p class='img-card-yoda' style="width: 550px; background-size: 108%" alt="Figura Funko Pop Grogu - The Mandalorian"></p>
+            <li class="card-item__cover imagen-yoda">
+                <img class="card-item__img--front" src="../../img/star-wars/baby-yoda-1.webp"
+                    alt="figura coleccionable funko star wars trooper">
+                <img class="card-item__img--back" src="../../img/star-wars/baby-yoda-box.webp"
+                    alt="figura coleccionable funko star wars trooper box">
+                <!-- <p class='img-card-yoda' style="width: 550px; background-size: 108%"
+                    alt="Figura Funko Pop Grogu - The Mandalorian"></p> -->
             </li>
             <li>
                 <h4 id="tituloStar">STAR WARS</h4>
@@ -54,13 +59,16 @@
                 <p id="descrip__price">$ 1799,99</p>
                 <div class="cantItems">
                     <div class="inputYoda">
-                        <input type="number" class="inputYoda">
+                        <input type="number" name="quantity" id="quantity" class="inputYoda" value="0">
                     </div>
                     <div>
-                        <input type="button" class="btn_Yoda1" style="margin-bottom: 5px; background-image: url(../../img/icons/+.svg)">
-                        <input type="button" class="btn_Yoda1" style="background-image: url(../../img/icons/-.svg)">
+                        <button type="button" class="btn_Yoda1" id="add"
+                            style="margin-bottom: 5px; background-image: url(../../img/icons/+.svg)"></button>
+                        <button type="button" class="btn_Yoda1" id="subtract"
+                            style="background-image: url(../../img/icons/-.svg)"></button>
                     </div>
-                    <div> <input class="boton" style="width: 181px; height: 37.91px;" type="submit" value="Agrergar al carrito"></div>
+                    <div> <input class="boton" style="width: 181px; height: 37.91px;" type="submit"
+                            value="Agregar al carrito"></div>
                 </div>
 
                 <a href="">
@@ -73,7 +81,7 @@
             <div class="glide__track" data-glide-el="track">
                 <ul class="slider__items glide__slides">
                     <li class="slider__item glide__slide "><!-- inicio cuarta seccion primer articulo -->
-                        <article class="card-item">
+                        <article>
                             <a class="card-item__link" href="../shop/item.html">
                                 <picture class="card-item__cover">
                                     <span class="card-item__tag">NUEVO</span>
@@ -93,7 +101,7 @@
                     </li><!-- fin cuarta seccion primer articulo -->
 
                     <li class="slider__item glide__slide"><!-- inicio cuarta seccion segundo articulo -->
-                        <article class="card-item">
+                        <article>
                             <a class="card-item__link" href="../shop/item.html">
                                 <picture class="card-item__cover">
                                     <span class="card-item__tag">NUEVO</span>
@@ -113,7 +121,7 @@
                     </li><!-- fin cuarta seccion segundo articulo -->
 
                     <li class="slider__item glide__slide"><!-- inicio cuarta seccion tercer articulo -->
-                        <article class="card-item">
+                        <article>
                             <a class="card-item__link" href="../shop/item.html">
                                 <picture class="card-item__cover">
                                     <span class="card-item__tag">NUEVO</span>
@@ -134,9 +142,11 @@
                 </ul>
             </div>
             <div class="glide__arrows" data-glide-el="controls">
-                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><iconify-icon icon="ic:round-chevron-left"></iconify-icon></button>
-                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><iconify-icon icon="ic:round-chevron-right"></iconify-icon></button>
-              </div>
+                <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><iconify-icon
+                        icon="ic:round-chevron-left"></iconify-icon></button>
+                <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><iconify-icon
+                        icon="ic:round-chevron-right"></iconify-icon></button>
+            </div>
         </section>
     </main>
 
@@ -155,6 +165,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="../../js/glide.js"></script>
     <script src="../../js/item.js"></script>
-
 </body>
+
 </html>
