--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,11 @@
     <header><!-- inicio header -->
         <nav class="container navbar">
             <picture class="navbar__logo">
-                <a href="./index.html"><img src="./img/branding/logo_light_horizontal.svg"
-                        alt="Isologotipo de la marca funkoshop"></a>
+                <a href="./index.html"><img src="./img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop"></a>
             </picture>
             <ul class="navbar__menu">
                 <li class="navbar__item with__submenu">
-                    <a class="navbar__link with_icon" href="./pages/shop/shop.html">SHOP<iconify-icon
-                            icon="mdi:chevron-down"></iconify-icon></a>
+                    <a class="navbar__link with_icon" href="./pages/shop/shop.html">SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon></a>
                     <ul class="submenu">
                         <li class="submenu__item">
                             <a href="./pages/shop/shop.html" class="submenu__link">Funkos</a>
@@ -44,11 +42,10 @@
         <article class="hero__content container">
             <h3 class="hero__title">Nuevos Ingresos</h3>
             <p class="hero__text"> Descubrí el próximo Funko Pop de tu colección</p>
-
             <a class="hero__link" href="./pages/shop/shop.html">SHOP</a>
         </article>
-
     </section><!--fin banner-->
+
     <main class="container main-container"> <!-- inicio cuerpo principal -->
         <section class="collection container"><!-- inicio primera seccion -->
             <ARTICLE class="collection__content">
@@ -60,6 +57,7 @@
                 <img src="./img/star-wars/baby-yoda-1.webp" alt="Figura coleccionable de funko grogu">
             </picture>
         </section><!-- fin primera seccion -->
+
         <section class="collection container"><!-- inicio segunda seccion -->
             <ARTICLE class="collection__content">
                 <h3 class="collection__title">POKEMON INDIGO</h3>
@@ -70,6 +68,7 @@
                 <img src="./img/pokemon/vulpix-1.webp" alt="Figura coleccionable de funko vulpis de la serie pokemon">
             </picture>
         </section><!-- fin segunda seccion -->
+
         <section class="collection container"><!-- inicio tercera seccion -->
             <ARTICLE class="collection__content">
                 <h3 class="collection__title">HARRY POTTER </h3>
@@ -77,8 +76,7 @@
                 <a class="collection__link" href="./pages/shop/shop.html">VER COLECCIÓN</a>
             </ARTICLE>
             <picture class="collection__cover">
-                <img src="./img/harry-potter/snape-patronus-1.webp"
-                    alt="Figura coleccionable de funko del patronus de snape de la pelicula Harry poter">
+                <img src="./img/harry-potter/snape-patronus-1.webp" alt="Figura coleccionable de funko del patronus de snape de la pelicula Harry poter">
             </picture>
         </section><!-- fin tercera seccion -->
 
@@ -87,14 +85,12 @@
             <div class="glide__track" data-glide-el="track">
                 <ul class="slider__items glide__slides">
                     <li class="slider__item glide__slide "><!-- inicio cuarta seccion primer articulo -->
-                        <article>
+                        <article class="card-item">
                             <a class="card-item__link" href="./pages/shop/item.html">
                                 <picture class="card-item__cover">
                                     <span class="card-item__tag">NUEVO</span>
-                                    <img class="card-item__img--front" src="./img/star-wars/trooper-1.webp"
-                                        alt="figura coleccionable funko star wars trooper">
-                                    <img class="card-item__img--back" src="./img/star-wars/trooper-box.webp"
-                                        alt="figura coleccionable funko star wars trooper box">
+                                    <img class="card-item__img--front" src="./img/star-wars/trooper-1.webp" alt="figura coleccionable funko star wars trooper">
+                                    <img class="card-item__img--back" src="./img/star-wars/trooper-box.webp" alt="figura coleccionable funko star wars trooper box">
                                 </picture>
                                 <div class="card-item__content">
                                     <p class="card-item__licence">STAR WARS</p>
@@ -107,14 +103,12 @@
                     </li><!-- fin cuarta seccion primer articulo -->
 
                     <li class="slider__item glide__slide"><!-- inicio cuarta seccion segundo articulo -->
-                        <article>
+                        <article class="card-item">
                             <a class="card-item__link" href="./pages/shop/item.html">
                                 <picture class="card-item__cover">
                                     <span class="card-item__tag">NUEVO</span>
-                                    <img class="card-item__img--front" src="./img/pokemon/pidgeotto-1.webp"
-                                        alt="figura coleccionable funko pokemon pidgeotto">
-                                    <img class="card-item__img--back" src="./img/pokemon/pidgeotto-box.webp"
-                                        alt="figura coleccionable funko pokemon pidgeotto box">
+                                    <img class="card-item__img--front" src="./img/pokemon/pidgeotto-1.webp" alt="figura coleccionable funko pokemon pidgeotto">
+                                    <img class="card-item__img--back" src="./img/pokemon/pidgeotto-box.webp" alt="figura coleccionable funko pokemon pidgeotto box">
                                 </picture>
                                 <div class="card-item__content">
                                     <p class="card-item__licence">POKEMON</p>
@@ -127,14 +121,12 @@
                     </li><!-- fin cuarta seccion segundo articulo -->
 
                     <li class="slider__item glide__slide"><!-- inicio cuarta seccion tercer articulo -->
-                        <article>
+                        <article class="card-item">
                             <a class="card-item__link" href="./pages/shop/item.html">
                                 <picture class="card-item__cover">
                                     <span class="card-item__tag">NUEVO</span>
-                                    <img class="card-item__img--front" src="./img/harry-potter/luna-1.webp"
-                                        alt="figura coleccionable funko Harru-potter luna">
-                                    <img class="card-item__img--back" src="./img/harry-potter/luna-box.webp"
-                                        alt="figura coleccionable funko Harru-potter luna box">
+                                    <img class="card-item__img--front" src="./img/harry-potter/luna-1.webp" alt="figura coleccionable funko Harru-potter luna">
+                                    <img class="card-item__img--back" src="./img/harry-potter/luna-box.webp" alt="figura coleccionable funko Harru-potter luna box">
                                 </picture>
                                 <div class="card-item__content">
                                     <p class="card-item__licence">HARRY POTTER</p>
@@ -150,7 +142,7 @@
             <div class="glide__arrows" data-glide-el="controls">
                 <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><iconify-icon icon="ic:round-chevron-left"></iconify-icon></button>
                 <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><iconify-icon icon="ic:round-chevron-right"></iconify-icon></button>
-              </div>
+            </div>
         </section>
     </main><!-- fin cuerpo principal -->
 
@@ -165,9 +157,9 @@
         </nav>
         <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
     </footer><!-- fin footer seccion -->
+
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="./js/glide.js"></script>
 </body>
-
 </html>
