Secorrigieron los htmal y los css

--- a/public/pages/shop/item.html
+++ b/public/pages/shop/item.html
@@ -68,7 +68,7 @@
             <div class="glide__track" data-glide-el="track">
                 <ul class="slider__items glide__slides">
                     <li class="slider__item glide__slide "><!-- inicio cuarta seccion primer articulo -->
-                        <article class="card-item">
+                        <article>
                             <a class="card-item__link" href="../shop/item.html">
                                 <picture class="card-item__cover">
                                     <span class="card-item__tag">NUEVO</span>
@@ -86,7 +86,7 @@
                     </li><!-- fin cuarta seccion primer articulo -->
 
                     <li class="slider__item glide__slide"><!-- inicio cuarta seccion segundo articulo -->
-                        <article class="card-item">
+                        <article>
                             <a class="card-item__link" href="../shop/item.html">
                                 <picture class="card-item__cover">
                                     <span class="card-item__tag">NUEVO</span>
@@ -104,7 +104,7 @@
                     </li><!-- fin cuarta seccion segundo articulo -->
 
                     <li class="slider__item glide__slide"><!-- inicio cuarta seccion tercer articulo -->
-                        <article class="card-item">
+                        <article >
                             <a class="card-item__link" href="../shop/item.html">
                                 <picture class="card-item__cover">
                                     <span class="card-item__tag">NUEVO</span>
